GNOME Bugzilla – Bug 702129
User account setup - don't use dialog-error-symbolic to indicate an unsatisfactory password
Last modified: 2014-07-25 18:09:49 UTC
Right now the password field shows a dialog-error-symbolic icon when the password isn't good enough. This is bad for a couple of reasons: * It is inconsistent with the use of dialog-error-symbolic to indicate that caps lock is on. * It is a negative judgment on the the user - we present an error indication while the user is still in the process of creating their password. This isn't a good user experience. A better solution would be to show a check mark (object-select-symbolic) when the password is good enough - to provide positive affirmation rather than negative critique.
Changing that round wouldn't work currently as the explanation of the reason why a password strength is a certain level is in the tooltip of the dialog-error-symbolic icon. e.g. "password contains user name" or "password is dictionary word"
Working on changes to be corresponding with g-c-c user accounts panel.
Created attachment 274463 [details] [review] password: share files from account page Remove duplicated and unused files from password page. Change Makefile accordingly to share the codes with account page.
Created attachment 274465 [details] [review] password: design changes Design changes are done according mockup. It corresponds with User Accounts panel in Gnome Control Center. Use checkmarks to indicate correct values instead of checkmarks. Alignment of hints is changed. Hints are dimmed and dynamic. User-friendy passwords hints are introduced.
Created attachment 274466 [details] screenshots of the redesigned page
(In reply to comment #5) > Created an attachment (id=274466) [details] > screenshots of the redesigned page Looks fantastic. :)
Review of attachment 274463 [details] [review]: looks good to me
Review of attachment 274465 [details] [review]: this looks good to me
Created attachment 275472 [details] [review] password: remove generated files There are also um-realm-generated.h and um-realm-generated.c which shouldn't be in git due to they are generated...
Review of attachment 275472 [details] [review]: Yep.
Attachment 274463 [details] pushed as 6b9ba63 - password: share files from account page Attachment 274465 [details] pushed as 59be1ba - password: design changes
This is causing a build failure in Continuous; I think we now need to handle srcdir != builddir in the include flags.
pushed one fix lets see if it builds now