password: share files from account page

Remove duplicated and unused files from password page. Change
Makefile accordingly to share the codes with account page.

https://bugzilla.gnome.org/show_bug.cgi?id=702129